--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "5.1.3",
     "raect": "1.0.4",
     "react": "18.0.0",
+    "react-bootstrap": "2.4.0",
     "react-dom": "18.0.0",
+    "react-icons": "4.4.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
